--- a/package.json
+++ b/package.json
@@ -2,16 +2,18 @@
   "name": "curso-backend",
   "version": "1.0.0",
   "description": "",
-  
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/app.js"
+    "start": "nodemon src/controllers/app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "nodemon": "^3.0.1"
+    "multer": "^1.4.5-lts.1",
+    "nanoid": "^4.0.2",
+    "nodemon": "^3.0.1",
+    "router": "^1.3.8"
   }
 }
