--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/controllers/app.js"
+    "start": "nodemon src/app.js"
   },
   "author": "",
   "license": "ISC",
