--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.2",
     "nodemon": "^3.0.1",
-    "router": "^1.3.8"
+    "router": "^1.3.8",
+    "socket.io": "^4.7.2"
   }
 }
